Fix text, priority and sort methods